tests/fixtures/valid/builtins/enumerate_builtin.py
# enumerate builtin
lst: list[str] = ["a", "b", "c"]
for i, x in enumerate(lst):
    print(i, x)
