tests/fixtures/invalid/min_none_dict.py
# Cannot call min() with None, Dict[str, int]
x = min(None, {"a": 1})
